@@ -106,6 +106,7 @@ void set_UI_volume(int vol);
 unsigned int get_current_track();
 unsigned int get_num_tracks();
 void remove_track(unsigned int i);
+void play_track(unsigned int i);
 
 }
 
