@@ -26,9 +26,12 @@ Version 1.13.7+dev:
 	 * #wesnoth.music_list counts the number of tracks on the playlist
 	 * wesnoth.music_list.current returns mutable information about the currently-playing track
 	 * wesnoth.music_list.current_i returns the index of the current track on the list
+       It is writeable, allowing you to switch to any track on the list. This respects fade values.
+     * wesnoth.music_list.all returns a copy of the playlist that can be stored in a variable.
 	 * wesnoth.music_list.play plays a specific track (as [music]play_once=yes)
 	 * wesnoth.music_list.add appends a track to the playlist (as [music]append=yes)
 	 * wesnoth.music_list.clear clears the current playlist
+	 * wesnoth.music_list.next fades out the current track and moves to a new track on the playlist
 	 * wesnoth.music_list.force_refresh forces any pending playlist changes to be immediately applied
 	 * wesnoth.music_list.volume attribute gets/sets the current music volume, as [volume]music=
 	 * Each track has modifiable shuffle, once, ms_before, ms_after attributes and
